docs(learning): re-run Java stage 6's tooling findings against JDK 26
All three of stage 6's tooling findings were made on JDK 25, and tooling is
where this workspace has drifted every time, so they were re-run with Maven
3.9.16 on JDK 26.0.2.1. All three survive. The correction is that two of them
were written more narrowly than the fact deserves.

What execution changed:

- maven-dependency-plugin: the claim holds and generalises. A module compiled
  with release 26 produces class file major version 70, Maven still resolves
  3.7.0 by default, and it fails with "Unsupported class file major version
  70" rather than 69. Pinning 3.11.0 reads it and still reports both
  directions, used-undeclared commons-lang3 against unused-declared
  commons-configuration2, which is lesson 0033's own case a release later. The
  number names the release you compiled for rather than a bug somebody fixed,
  so the lesson and the sheet now say that instead of quoting only 69.
- The JMH annotation-processor trap is unchanged, including its silence: at
  provided scope on JDK 26 the build succeeds, warns about nothing, and leaves
  no META-INF/BenchmarkList, while annotationProcessorPaths generates it. Both
  halves verified; only the sheet records the recheck.
- JOL 0.17 is worse than "does not complete", and the sheet now says how each
  method fails. Self-attach throws after terminal-deprecation warnings naming
  sun.misc.Unsafe::arrayBaseOffset from JOL's own class, and its suggested
  -Djol.magicFieldOffset=true does not rescue it. With
  -Djdk.attach.allowAttachSelf it attaches, warns that dynamic agent loading
  will be disallowed by default in a future release, and then produces no
  layout at all, so it hangs rather than failing. As -javaagent the virtual
  machine refuses to start for want of a premain class.

The pattern is recorded in NOTES.md: a tooling finding should be stated as the
mechanism plus the instance, not the instance alone, or every recheck reads as
though the